Fixed tile--list spacing so that it's on grid

--- a/scss/components/_tiles.scss
+++ b/scss/components/_tiles.scss
@@ -39,7 +39,9 @@
 			width: 100%;
 			height: 288px;
 			max-height: 288px;
-			border:1px blue solid;
+			background-color: $white;
+			border: $mercury 2px solid;
+			border-bottom: none;
 		}
 
 		&__image-container {
@@ -183,7 +185,7 @@
 			border-bottom: 1px solid $iron-light;
 			padding: 0 $col;
 			list-style: none;
-			margin-top: 0;
+			margin-top: -1px;
 		}
 
 		&__title {
@@ -193,7 +195,7 @@
 
 		&__content {
 			margin: 0;
-			padding: 6px 0 18px 0;
+			padding: 0 0 ($baseline * 3) 0;
 		}
 
 	}
@@ -233,10 +235,3 @@
 	&__read-more {}
 
 }
-
-
-
-
-
-
-
